gcp/two-tier-vpc-cpx-adm/config-files/monitoring_nodeport.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: exporter
  labels:
    app: exporter
spec:
  containers:
    - name: exporter
      image: "quay.io/citrix/netscaler-metrics-exporter:latest"
      args:
        - "--target-nsip=lb-service-hotdrinks.tier-2-adc.svc.cluster.local:9080"
        - "--target-nsip=lb-service-colddrinks.tier-2-adc.svc.cluster.local:9080"
        - "--target-nsip=lb-service-guestbook.tier-2-adc.svc.cluster.local:9080"
        - "--port=8888"
      imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: exporter
  labels:
    app: exporter
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 8888
    name: exporter-port
  selector:
    app: exporter
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.5.0
          args:
            - "--config.file=/etc/prometheus/prometheus.cfg"
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            defaultMode: 420
            name: prometheus-server-conf
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  labels:
    name: prometheus
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - name: http
      port: 9090
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: grafana
  labels:
    name: grafana
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
---
